grammair/web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grammair-web-service
  namespace: grammair
spec:
  selector:
    app: grammair-web
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
