grammair/web/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grammair-web-ing
  namespace: grammair
spec:
  ingressClassName: traefik
  rules:
    - host: grammair.co
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grammair-web-service
                port:
                  number: 3000
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: grammair-server-service
                port:
                  number: 8080
  tls:
    - hosts:
        - grammair.co
      secretName: grammair-co-tls
